feat: allow dateless sprints (#247)
This will allow for more kanban-ish setups, which sometimes utilize both
icebox and backlog boards for unsprinted items.
